<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">Poradnik Piwny</string>
    <string name="menu_settings">Settings</string>
    <string name="beer_review_select">Wybierz:</string>
    <string name="title_activity_show_beer">Informacje o Piwie</string>
    <string name="beer_name_label">Nazwa:</string>
    <string name="beer_alcohol_label">Zawartość alkoholu:</string>
    <string name="beer_extract_label">Ekstrakt:</string>
    <string name="beer_malt_label">Słód:</string>
    <string name="beer_type_label">Typ:</string>
    <string name="beer_filtered_label">Filtrowane:</string>
    <string name="beer_pasteurized_label">Pasteryzowane:</string>
    <string name="beer_flavored_label">Smakowe:</string>
    <string name="beer_placeofbrew_label">Miejsce warzenia:</string>
    <string name="beer_rankingavg_label">Średnia ocena</string>
    <string name="beer_dateadded_label">Data dodania:</string>
    <string name="beer_search_hint">Wyszukaj piwo...</string>
    <string name="topranking_tab">Najlepsze</string>
    <string name="lastadded_tab">Najnowsze</string>
    <string name="search_tab">Szukajka</string>
    <string name="beer_search_notfound">Nie znaleziono piwa</string>
    <string name="beer_name_example">Przykładowe piwo</string>
    <string name="beer_manufacturer_name_example">Wytwórca</string>
    <string name="beer_dateadded_example">1970-01-01 12:34:56</string>
    <string name="beer_ranking_example">4.25</string>
    <string name="beer_alcohol_example">6.5 %</string>
    <string name="beer_extract_example">18.5 %</string>
    <string name="beer_malt_example">pszenny</string>
    <string name="beer_type_example">bezalkoholowe</string>
    <string name="beer_filtered_example">tak</string>
    <string name="beer_pasteurized_example">nie</string>
    <string name="beer_flavored_example">nie</string>
    <string name="beer_placeofbrew_example">browar</string>
    <string name="beer_image_example">Beer</string>
    <string name="beer_country_label">Kraj:</string>
    <string name="beer_country_example">Polska</string>
    <string name="beer_region_label">Region:</string>
    <string name="beer_region_example">Małopolska</string>
    <string name="beer_city_label">Miasto:</string>
    <string name="beer_city_example">Kraków</string>
    <string name="beer_family_label">Rodzina piwa:</string>
    <string name="beer_family_example">Lager</string>
    <string name="tak">Tak</string>
    <string name="nie">Nie</string>
    <string name="beer_malt_jeczmienny">Jęczmienny</string>
    <string name="beer_malt_pszenny">Pszenny</string>
    <string name="beer_malt_inny">Inny</string>
    <string name="beer_placeofbrew_browar">Browar</string>
    <string name="beer_placeofbrew_restauracja">Restauracja</string>
    <string name="beer_placeofbrew_dom">Dom</string>
    <string name="beer_type_bezalkoholowe">Bezalkoholowe</string>
    <string name="beer_type_lekkie">Lekkie</string>
    <string name="beer_type_pelne">Pełne</string>
    <string name="beer_type_mocne">Mocne</string>
    <string name="beer_description_example">"Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. Maecenas malesuada elit lectus felis, malesuada ultricies. Curabitur et ligula. Ut molestie a, ultricies porta urna. Vestibulum commodo volutpat a, convallis ac, laoreet enim. "</string>
    <string name="beer_search_invalidformvalues">Niepoprawnie uzupełniony formularz</string>
    <string name="beer_search_nullpointer">Nie podano identyfikatora wyników wyszukiwania</string>
    <string name="beer_search_resultnotfound">Wyniki wyszukiwania o danym identyfikatorze nie istnieją</string>
    <string name="beer_error_noresponse">Brak odpowiedzi, sprawdź połączenie</string>
    <string name="beer_error_internalservererror">Błąd serwera</string>
    <string name="beer_notfound">Piwo o podanym identyfikatorze nie instnieje lub jest nieaktywne</string>
    <string name="beer_image_notfound">Zdjęcie o podanym identyfikatorze nie istnieje lub jest nieaktywne</string>
    <string name="beer_imageneightbornotfound">Nie istnieje następne zdjęcie</string>
    <string name="beer_family_notfound">Rodzina piwa o podanym identyfikatorze nie istnieje</string>
    <string name="beer_distributor_notfound">Dystrybutor o podanym identyfikatorze nie istnieje</string>
    <string name="beer_manufacturer_notfound">Wytwórca o podanym identyfikatorze nie istnieje</string>
    <string name="country_notfound">Państwo o podanym identyfikatorze nie istnieje</string>
    <string name="region_notfound">Region o podanym identyfikatorze nie instnieje</string>
    <string name="city_notfound">Miasto o podanym identyfikatorze nie istnieje</string>
</resources>
